# booklub-project

./: .gitignore  Makefile  pyproject.toml  render.sh  requirements.txt
bookclub/articles/: models.py  urls.py  views.py
bookclub/articles/migrations/: 0001_initial.py  0002_article_book.py  0002_initial.py  0003_remove_article_title.py  0004_alter_article_author_alter_article_text.py
bookclub/bookclub/: bot.py  mixins.py  settings.py  urls.py  views.py
bookclub/books/: admin.py  models.py  serializers.py  test_img.py  urls.py  views.py
bookclub/books/migrations/: 0001_initial.py  0002_book_img.py  0002_bookraiting.py  0003_alter_book_img.py  0003_alter_bookraiting_raiting.py  0004_alter_book_img.py  0004_alter_bookraiting_raiting.py  0005_alter_book_img.py  0005_book_author.py  0006_alter_book_author_alter_book_description_and_more.py  0007_book_google_img.py  0008_alter_book_google_img.py
bookclub/meetings/: admin.py  forms.py  models.py  urls.py  views.py
bookclub/meetings/migrations/: 0001_initial.py  0002_initial.py  0002_meeting_temp_users_alter_meeting_particepents_and_more.py  0003_remove_meeting_temp_users_meeting_temp_users.py  0004_alter_meeting_particepents.py  (+2 more)
bookclub/staticfiles/: staticfiles.json
bookclub/templates/: 404.html  article.html  ava_change.html  book.html  books.html  confirm_delete.html  edit.html  front_register.html  home.html  layout.html  login.html  meeting.html  meetings.html  navigation.html  users.html
bookclub/users/: admin.py  forms.py  models.py  permissions.py  serializers.py  urls.py  views.py
(+13 files in other folders)
