[tool.poetry]
name = "booklub-project"
version = "0.1.0"
description = ""
authors = ["Aleksey Kosin <akosin@udm.ru>"]
readme = "README.md"
packages = [{include = "booklub_project"}]

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.1.6"
django-bootstrap4 = "^22.3"
pillow = "^9.4.0"
whitenoise = "^6.3.0"
django-extensions = "^3.2.1"
gunicorn = "^20.1.0"
python-dotenv = "^1.0.0"
requests = "^2.28.2"
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
